tests/agl/programs/errors/try_catch.agl
# try/catch ordering: first matching clause wins; the wildcard binds the abstract
# Exception base (message/trace_id only).
enum Review
  | Pass
  | Fail(issues: list[text])

param mode

agent reviewer

try
  if
    | mode = "abort" =>
      raise Abort(message: "stop now")
    | mode = "parse" =>
      let r: Review = ask("Judge it.", agent: reviewer)
      print "parsed ${r is Pass}"
    | mode = "match" =>
      case mode of
        | "never" => ()
    | else =>
      print "calm"
  print "body end"
catch AgentParseError as e =>
  print "parse error from ${e.agent} after ${e.attempts}"
catch Abort as e =>
  print "abort: ${e.message}"
catch _ as e =>
  print "other: ${e.message}"
print "after try"
